# kagi-dev-project

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  app.py  docker-compose.yaml  flake.nix  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt  setup.cfg
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: nv4r8lgnlsh3mcjg7x2jl9sxi1xwyd9i-source
api/: routes.py
auth/: routes.py
db/: db_init.py  utils.py
edit/: routes.py  utils.py
proxy/: routes.py
rss/: routes.py  utils.py
src/: app.py
src/db/: db_init.py  utils.py
src/edit/: routes.py  utils.py
src/proxy/: routes.py  utils.py
src/rss/: routes.py  utils.py
src/templates/: base.html.jinja  content.html.jinja  editor.html.jinja  feed.xml.jinja  home.html.jinja  input.html.jinja  preview.html.jinja
src/user/: routes.py
templates/: base.html  base.html.jinja  editor.html.jinja  error.html  error.html.jinja  feed.xml  home.html.jinja  input.html  input.html.jinja  preview.html.jinja
user/: routes.py
